tests/negative/test_let_no_type_init_no_type.orb
fnc main() () {
    let (x 1);
};